# EdgeComputing

./: .db_test.c.swp  README.md  docker-compose.yml  hello.txt  index.html  tracking.ibd
DB_table/: test.ibd
PHP/: AddDevice.php  AddService.php  AppDelete.php  Device.php  DeviceDelete.php  Log.php  LogDelete.php  Login.php  Register.php  Service.php  UserDelete.php
bake/: .gitignore  bakeconf.xml
device-sdk-c/: README.md
device-sdk-c/include/edgex/: edgex.h
example-device-c/: .template.c.swp  DBconnect  DBconnect.c  device-example-c  template.c
new_tracking/: Reference.txt  test.ibd
nfs-ganesha/: memo.txt
pnfs-nfs-utils/support/include/nfs/: nfs.h
pnfs-nfs-utils/support/nfs/: exports.c
pnfs-nfs-utils/utils/: Makefile.am
pnfs-nfs-utils/utils/spnfsd/: Makefile.am  makestatic  remove_DB  remove_DB.c  send_DB  send_DB.c  spnfsd  spnfsd.c  spnfsd.conf  spnfsd_ops.c
pnfs-nfs-utils_normal/: configure.ac
pnfs-nfs-utils_normal/support/include/: nfslib.h
pnfs-nfs-utils_normal/support/include/nfs/: nfs.h
pnfs-nfs-utils_normal/utils/exportfs/: exportfs.c
pnfs-nfs-utils_normal/utils/mountd/: cache.c
pnfs-nfs-utils_normal/utils/spnfsd/: spnfsd.h  spnfsd_ops.c
pnfs-nfs-utils_test/: .gitignore
pnfs-nfs-utils_test/support/nfs/: exports.c
pnfs-nfs-utils_test/utils/: Makefile.am
pnfs-nfs-utils_test/utils/exportfs/: exportfs.c
pnfs-nfs-utils_test/utils/spnfsd/: memo.txt  nfsd4_spnfs.h  spnfsd.c
webpage/: index.html
webpage/css/: index.css
webpage/js/: echart.js  echarts.min.js  fontscroll.js  kakaomap.js
